--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -14,13 +14,27 @@
 }
 .cardTitleBox {
   display: flex;
-  justify-content: center;
-  align-items: end;
+  flex-direction: column;
+  justify-content:end;
+  align-items:center;
   background-color: #417f56;
   width: 300px;
   height: 130px;
  
  
+}
+.cardTitleBox h2{
+  border: solid 1px black;
+  width: 150px;
+  height: 80px;
+  text-align: center;
+  background-color: white;
+  box-shadow: 2px 2px 5px white;
+  cursor: pointer;
+  display: flex;
+  gap: 2rem;
+  justify-content:center;
+  align-items: center;
 }
 .cardTitleP p {
   display: flex;
