--- a/src/components/info/info.css
+++ b/src/components/info/info.css
@@ -4,8 +4,8 @@
     align-items:flex-start;
     padding: 1.5rem;
     margin: 1rem;
-    width: 1440px;
-    height: 336px;
+    width: 100%;
+    height:280px;
     background-image: url(../../assets/png-transparent-green-leaf-frame-wood-background-green-leaves-frame-board.png);
     gap: 1rem;
 
